Fixed position of pop-up box on mobile, fixed size of map on contact page, fixed margins of displayed store search

--- a/css/contact.css
+++ b/css/contact.css
@@ -13,9 +13,6 @@
   font-weight: 700;
 }
 
-.store-search-info {
-  margin-left: 20px;
-}
 .search-box {
   margin: 10px;
   max-width: 400px;
